--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,3 +1,7 @@
+/* from inuit.css */
+@import 'app/grid';
+@import 'app/widths';
+
 /* add app styles */
 @import 'app/variables';
 @import 'app/mixins';
@@ -15,6 +19,7 @@
 @import 'app/details';
 @import 'app/preview';
 @import 'app/bottom-ctrl';
+@import 'app/responsive';
 
 @import 'app/home';
 @import 'app/edit';
