--- a/src/html/layouts/application.tmpl
+++ b/src/html/layouts/application.tmpl
@@ -28,9 +28,9 @@
 </head>
 <body data-ng-cloak data-ng-controller="mainController">
 
-  <div data-ng-repeat="message in messages">
-    <div data-message-directive data-message="message" data-message-type="{{message.type}}"></div>
-  </div>
+  <span style="position:absolute; z-index:100; top:10px; left:10px;">{{message}}</span>
+
+  <div data-ng-if="message.type" data-message-directive data-message="message" data-message-type="{{message.type}}"></div>
 
   <div id="container" class="container">
     <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ animationClass }} {{ pageClass }}  " data-ng-view data-ng-animate-children></div>
