implemented reset password

--- a/src/html/partials/login/index.html
+++ b/src/html/partials/login/index.html
@@ -63,6 +63,7 @@
         <button class="btn--white" type="submit">Continue</button>
       </div>
     </form>
+    <a href="" data-ng-click="go('/reset-pwd', 'slide-left')">Forgot password</a>
   </div>
 </div>
 
