--- a/src/html/partials/global/message.html
+++ b/src/html/partials/global/message.html
@@ -3,11 +3,11 @@
   <div class="message__inner">
     <button class="message__close-btn btn"><i class="icon--close"></i></button>
     <div class="message__header">
-      <h2 class="message__title">Headline</h2>
+      <h2 class="message__title">{{message.title}}</h2>
     </div>
     <div class="message__body">
       <div class="message__body-inner">
-        <p>[MESSAGE]{{message.name}}</p>
+        <p>{{message.content}}</p>
       </div>
     </div>
     <div class="message__footer">
