updates and bug fixes

--- a/src/config.xml.tmpl
+++ b/src/config.xml.tmpl
@@ -16,6 +16,7 @@
     <preference name="ShowSplashScreenSpinner" value="false" />
 
     <preference name="iosPersistentFileLocation" value="Library" />
+    <preference name="DisallowOverscroll" value="true" />
 
 
 </widget>
