--- a/src/html/partials/global/progress.html
+++ b/src/html/partials/global/progress.html
@@ -7,14 +7,15 @@
     </div>
     <div class="message__body">
       <div class="message__body-inner">
-        <p data-ng-if="message.content">adding ({{message.progressIndex}} / {{message.totalLength}}) {{message.content}}</p>
+        <p>{{message.batchObject.successes + message.batchObject.failures}}</p>
+        <p data-ng-if="message">adding ({{message.progressIndex}} / {{message.totalLength}}) {{message.content}}</p>
         <ul>
           <li data-ng-repeat="result in message.results track by $index">{{result}}</li>
         </ul>
       </div>
     </div>
     <div class="message__footer">
-      <span>Footer</span>
+      <button class="test" data-selector="cancel-btn">Cancel</button>
     </div>
   </div>
 </section>
