--- a/src/html/partials/login/index.html
+++ b/src/html/partials/login/index.html
@@ -65,5 +65,6 @@
     </form>
     <a href="" data-ng-click="go('/reset-pwd', 'slide-left')">Forgot password</a>
   </div>
+  <p><button data-ng-click="onCancelBtnClick()">Cancel</button></p>
 </div>
 
