fixed handling of broken image uploads

--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -10,7 +10,8 @@
 <div class="center center--show-top">
   <div class="center-inner">
 
-    <div data-ng-if="!appData.galleries || appData.galleries.length < appData.settings.maxGalleries">
+    <!--<div data-ng-if="!appData.galleries || appData.galleries.length < appData.settings.maxGalleries">-->
+    <div>
     <form class="form"
           name="createGalleryForm"
           data-ng-submit="submitForm(createGalleryForm.$valid)"
