--- a/src/html/partials/edit-gallery/index.html
+++ b/src/html/partials/edit-gallery/index.html
@@ -13,6 +13,7 @@
   <div class="center-inner">
 
     <h1 class="gallery-title">{{gallery.title}}</h1>
+    <div class="status"><span>{{gallery.photos.length}} of {{gallery.settings.maxPhotos}}</span></div>
 
     <div class="edit-thumbs">
       <div
