--- a/src/html/partials/global/progress.html
+++ b/src/html/partials/global/progress.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="message__footer">
-      <button class="test" data-selector="cancel-btn">Cancel</button>
+      <button class="cancel-btn">Cancel</button>
     </div>
   </div>
 </section>
