--- a/src/html/partials/slideshow/index.html
+++ b/src/html/partials/slideshow/index.html
@@ -1,7 +1,7 @@
 <!-- slideshow view-->
 <div class="top top--dark">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('/edit-gallery', 'slide-right')"></span>
+    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
   </div>
 </div>
 
