--- a/src/html/partials/global/message.html
+++ b/src/html/partials/global/message.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="message__footer">
-      <span>Footer</span>
+      <button class="close-btn">Close</button>
     </div>
   </div>
 </section>
