--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -21,7 +21,7 @@
       <span class="form__text-input-outer">
         <input class="form__text-input"
                type="text"
-               data-ng-model="createGalleryForm.galleryTitle"
+               data-ng-model="createGalleryFormData.galleryTitle"
                data-ng-minlength="3"
                placeholder="YOUR TITLE"
                required/>
