changed syncId from integer to random string, updates

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -20,6 +20,7 @@
 @import 'app/preview';
 @import 'app/bottom-ctrl';
 @import 'app/responsive';
+@import 'app/number-pad';
 
 @import 'app/home';
 @import 'app/edit';
