--- a/src/css/index.less
+++ b/src/css/index.less
@@ -13,6 +13,7 @@
 @import 'app/icons';
 @import 'app/messages';
 @import 'app/main-menu';
+@import 'app/settings-menu';
 @import 'app/pages';
 @import 'app/forms';
 @import 'app/misc';
