--- a/src/html/partials/auth/upload.html
+++ b/src/html/partials/auth/upload.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="center">
+<div class="center center--show-top">
   <div class="center__inner text-center">
 
     <h1>Enter Security-PIN</h1>
