--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -11,7 +11,7 @@
   <div class="center-inner">
 
     <div data-ng-if="!galleriesLimitReached">
-      <form class="form"
+      <form class="form--centered"
             name="createGalleryForm"
             data-ng-submit="submitForm(createGalleryForm.$valid)"
             novalidate>
