--- a/src/html/partials/select-gallery/index.html
+++ b/src/html/partials/select-gallery/index.html
@@ -4,6 +4,7 @@
   <div class="top__background"></div>
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="go('/home', 'slide-right')"></span>
+    <span class="float-right" data-ng-click="go('/settings', 'slide-left')">settings</span>
   </div>
 </div>
 
