--- a/src/html/partials/settings/index.html
+++ b/src/html/partials/settings/index.html
@@ -1,32 +1,43 @@
 <!--settings view-->
 
 <div class="top">
-  <div class="top__background"></div>
   <div class="top__inner">
+    <span class="top-icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right')"></span>
   </div>
 </div>
 
-<div class="center">
-  <div class="center__inner text-center">
+<div class="center center--show-top">
 
-    <form name="myForm">
-      <p>
-        <label>Allow uploads</label><br/>
-        <input type="radio" data-ng-model="gallerySettings.allowForeignUploads" data-ng-value="true"> Yes <br/>
-        <input type="radio" data-ng-model="gallerySettings.allowForeignUploads" data-ng-value="false"> No <br/>
-      </p>
+    <div class="grid full-height">
+      <div class="grid__item one-third full-height soft--right">
+        <ul class="settings-menu">
+          <!--<li class="settings-menu__title"><h2>Settings</h2></li>-->
+          <li class="settings-menu__item"
+              data-ng-class="{'active': settingsSection1 == 'gallery'}"
+              data-ng-click="go('settings/gallery', '')">Album settings</li>
+          <li class="settings-menu__item"
+              data-ng-class="{'active': settingsSection1 == 'slideshow'}"
+              data-ng-click="go('settings/slideshow', '')">Slideshow settings</li>
+          <li class="settings-menu__item"
+              data-ng-class="{'active': settingsSection1 == 'account'}"
+              data-ng-click="go('settings/account', '')">Your account</ul>
+        </li>
+      </div>
 
-    </form>
+      <div class="grid__item two-thirds full-height soft--left" data-ng-switch="settingsSection1">
+        <div data-ng-switch-default>
+          <div data-ng-include="'html/partials/settings/intro.html'"></div>
+        </div>
+        <div data-ng-switch-when="gallery">
+          <div data-ng-include="'html/partials/settings/gallery.html'"></div>
+        </div>
+        <div data-ng-switch-when="slideshow">
+          <div data-ng-include="'html/partials/settings/slideshow.html'"></div>
+        </div>
+        <div data-ng-switch-when="account">
+          <div data-ng-include="'html/partials/settings/account/index.html'"></div>
+        </div>
+      </div>
+    </div>
 
-
-  </div>
 </div>
-
-
-<div class="bottom">
-  <div class="bottom__background"></div>
-  <div class="bottom__inner">
-
-  </div>
-</div>
-
