--- a/src/css/index.less
+++ b/src/css/index.less
@@ -22,6 +22,7 @@
 @import 'app/bottom-ctrl';
 @import 'app/responsive';
 @import 'app/number-pad';
+@import 'app/box';
 
 @import 'app/home';
 @import 'app/edit';
