--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="center center--show-top">
-  <div class="center-inner">
+  <div class="center__inner">
 
     <div data-ng-if="!galleriesLimitReached">
       <form class="form--centered"
