--- a/src/html/partials/login/index.html
+++ b/src/html/partials/login/index.html
@@ -65,7 +65,9 @@
     </form>
     <a href="" data-ng-click="go('/reset-pwd', 'slide-left')">Forgot password</a>
 
-    <p><button data-ng-click="test()">Test</button></p>
+    <p>
+      <button data-ng-click="test()">Test</button>
+    </p>
 
   </div>
 </div>
