--- a/src/html/partials/select-gallery/index.html
+++ b/src/html/partials/select-gallery/index.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="center center--show-top">
-  <div class="center-inner">
+  <div class="center__inner">
 
     <h1>Select a gallery</h1>
 
@@ -20,7 +20,8 @@
       <h1 class="preview__title">{{gallery.title}}</h1>
 
       <ul class="preview__details">
-        <li class="preview__details-item" data-ng-if="(galleries[gallery.galleryId].photos | photoFilter : 'viewStatus' : 0).length">
+        <li class="preview__details-item"
+            data-ng-if="(galleries[gallery.galleryId].photos | photoFilter : 'viewStatus' : 0).length">
           <span class="preview__icon icon-new-image"></span>
           <span class="preview__details-value">{{ (galleries[gallery.galleryId].photos | photoFilter : 'viewStatus' : 0).length }}</span>
         </li>
@@ -41,61 +42,71 @@
       <div class="preview__images">
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 0" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 1" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 2" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 3" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 4" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 5" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 6" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 7" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 8" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
         <div class="preview__img-outer ">
           <div class="flip-container">
-            <img class="preview__img flipper" data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
+            <img class="preview__img flipper"
+                 data-ng-repeat="thumb in previewThumbnails[gallery.galleryId] track by thumb.id"
                  data-ng-if="$index == 9" data-ng-src="{{ thumb.src }}">
           </div>
         </div>
