--- a/src/html/partials/settings/gallery.html
+++ b/src/html/partials/settings/gallery.html
@@ -13,6 +13,7 @@
     <div class="settings__item">
       <span class="settings__item-label">Guest edit permission</span>
       <span class="settings__item-value">{{appSettings.allowForeignUploads}}</span>
+
       <p class="settings__item-info">Give others the permission to edit your album.</p>
     </div>
   </div>
@@ -20,4 +21,6 @@
 
 <p>You can change these settings by buying an <span data-ng-click="go('upgrade', 'slide-left')">upgrade</span>.</p>
 
-<p><button data-ng-click="go('upgrade', 'slide-left')">Upgrade</button></p>
+<p>
+  <button data-ng-click="go('upgrade', 'slide-left')">Upgrade</button>
+</p>
