--- a/src/html/partials/settings/intro.html
+++ b/src/html/partials/settings/intro.html
@@ -1,3 +1,7 @@
-<p>The free version is limited to one gallery with a maximum of five photos you can share with.</p>
+<p>The free version of this app is limited to one gallery with a maximum of five photos.</p>
+<p>If you like the app please feel free to purchase an upgrade. An upgrade increases the app limits and gets you access
+  to additional features.</p>
 
-<p><button data-ng-click="go('upgrade', 'slide-left')">Upgrade</button></p>
+<p>
+  <button data-ng-click="go('upgrade', 'slide-left')">Upgrade</button>
+</p>
