--- a/src/html/partials/upgrade/index.html
+++ b/src/html/partials/upgrade/index.html
@@ -7,24 +7,37 @@
 </div>
 
 <div class="center center--show-top">
+  <div class="center__inner">
 
     <div class="grid full-height">
       <div class="grid__item one-third full-height">
-
+        &nbsp;
       </div>
 
       <div class="grid__item two-thirds full-height" data-ng-switch="settingsSection">
         <h2>Upgrade options</h2>
-        <p>The free version of the app allows you to share one album with five photos.<br> For 1.00 € you can share up to
-        five albums with a maximum of 30 photos each.</p>
-        <p><button data-ng-click="onUpgrade1BtnClick()">Upgrade 1</button></p>
 
+        <p>The free version of the app allows you to share one album with five photos.</p>
+
+        <h3>Increase limits</h3>
+        <p>For 1.00 € you can share up to
+          5 albums with a maximum of 30 photos each.</p>
+
+        <p>
+          <button data-ng-click="onUpgrade1BtnClick()">Upgrade 1</button>
+        </p>
+        <hr>
+        <h3>Allow public uploads</h3>
         <p>Per default only the gallery owner is allowed to add and upload photos to an album.<br>
-        For 1.00 € you can upgrade the app to allow photos upload for all subscribers of an album.</p>
-        <p><button data-ng-click="onUpgrade2BtnClick()">Upgrade 2</button></p>
+          For 1.00 € you can upgrade the app to allow photos upload for all subscribers of an album.</p>
+
+        <p>
+          <button data-ng-click="onUpgrade2BtnClick()">Upgrade 2</button>
+        </p>
       </div>
     </div>
 
+  </div>
 </div>
 
 
