--- a/src/html/partials/get-gallery/index.html
+++ b/src/html/partials/get-gallery/index.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="center center--show-top">
-  <div class="center-inner">
+  <div class="center__inner">
 
     <div class="grid">
       <div class="grid__item two-thirds">
@@ -62,12 +62,12 @@
       </div>
       <div class="grid__item one-third">
         <h2>Login</h2>
+
         <p>Login with your PhotoFrame account to get and manage your own galleries on this device.</p>
-        <a href=""  data-ng-click="go('/login', 'slide-left')">Go to login</a>
+        <a href="" data-ng-click="go('/login', 'slide-left')">Go to login</a>
       </div>
 
     </div>
-
 
 
   </div>
