--- a/src/html/partials/global/progress.html
+++ b/src/html/partials/global/progress.html
@@ -8,7 +8,9 @@
     <div class="message__body">
       <div class="message__body-inner">
         <p>{{message.subtitle}}</p>
-        <p data-ng-if="message">{{message.prefix}} ({{message.batchObject.progress}} / {{message.batchObject.stackLength}}) {{message.suffix}}</p>
+
+        <p data-ng-if="message">{{message.prefix}} ({{message.batchObject.progress}} /
+          {{message.batchObject.stackLength}}) {{message.suffix}}</p>
         <ul>
           <li data-ng-repeat="result in message.results track by $index">{{result}}</li>
         </ul>
