--- a/src/html/partials/invite/index.html
+++ b/src/html/partials/invite/index.html
@@ -3,66 +3,71 @@
 <div class="top">
   <div class="top__background"></div>
   <div class="top__inner">
-    <span class="top-icon-back icon-back"  data-ng-click="back()"></span>
+    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
   </div>
 </div>
 
 <div class="center center--show-top">
-  <div class="center-inner text-center">
+  <div class="center__inner text-center">
 
-<div data-ng-show="showSuccessMessage">
-  <p>Your invitation was successfully send!</p>
-  <p>
-    <button class="btn--white" data-ng-click="back()">Back</button>
-    <button class="btn--white" data-ng-click="showInvitationForm()">Send Another</button>
-  </p>
-</div>
+    <div data-ng-show="showSuccessMessage">
+      <p>Your invitation was successfully send!</p>
 
-<div data-ng-show="showErrorMessage">
-  <h3>We are sorry.</h3>
-  <p>Service is temporarily unavailable. Our engineers are working quickly to resolve the issue.</p>
-  <p>
-    <button class="btn--white" data-ng-click="back()">Back</button>
-  </p>
-</div>
-
-  <form class="form" name="inviteForm" data-ng-if="showForm" data-ng-submit="invitationSubmit(inviteForm.$valid)">
-    <h1>Invite</h1>
-
-    <p class="push--bottom">Send an email invitation for your gallery.</p>
-
-    <div class="form__fieldset">
-
-      <p class="form__label">Recipient´s email<sup>*</sup></p>
-
-      <div class="form__text-input-outer push--bottom">
-        <input class="form__text-input"
-               type="email"
-               data-ng-model="formData.email"
-               placeholder=""/>
-      </div>
-
-      <p class="form__label">Your real name</p>
-      <div class="form__text-input-outer push--bottom">
-        <input class="form__text-input"
-               type="text"
-               data-ng-model="formData.ownerClearName"
-               placeholder=""/>
-      </div>
-
-      <p class="form__label">Your message</p>
-      <div class="form__text-input-outer push--bottom">
-      <textarea class="form__textarea"
-          data-ng-model="formData.message">Default message</textarea>
-        </div>
-
-      <p class="text-right push--top clear">
-        <button class="btn--white" type="submit">Send</button>
+      <p>
+        <button class="btn--white" data-ng-click="back()">Back</button>
+        <button class="btn--white" data-ng-click="showInvitationForm()">Send Another</button>
       </p>
-
     </div>
 
-  </form>
+    <div data-ng-show="showErrorMessage">
+      <h3>We are sorry.</h3>
+
+      <p>Service is temporarily unavailable. Our engineers are working quickly to resolve the issue.</p>
+
+      <p>
+        <button class="btn--white" data-ng-click="back()">Back</button>
+      </p>
+    </div>
+
+    <form class="form" name="inviteForm" data-ng-if="showForm" data-ng-submit="invitationSubmit(inviteForm.$valid)">
+      <h1>Invite</h1>
+
+      <p class="push--bottom">Send an email invitation for your gallery.</p>
+
+      <div class="form__fieldset">
+
+        <p class="form__label">Recipient´s email<sup>*</sup></p>
+
+        <div class="form__text-input-outer push--bottom">
+          <input class="form__text-input"
+                 type="email"
+                 data-ng-model="formData.email"
+                 placeholder=""/>
+        </div>
+
+        <p class="form__label">Your real name</p>
+
+        <div class="form__text-input-outer push--bottom">
+          <input class="form__text-input"
+                 type="text"
+                 data-ng-model="formData.ownerClearName"
+                 placeholder=""/>
+        </div>
+
+        <p class="form__label">Your message</p>
+
+        <div class="form__text-input-outer push--bottom">
+      <textarea class="form__textarea"
+                data-ng-model="formData.message">Default message</textarea>
+        </div>
+
+        <p class="text-right push--top clear">
+          <button class="btn--white" type="submit">Send</button>
+        </p>
+
+      </div>
+
+    </form>
 
   </div>
 </div>
